added nasa pic of the day api needs fixing

--- a/index.html
+++ b/index.html
@@ -6,6 +6,18 @@
     <title>Document</title>
 </head>
 <body>
+<div>
+    <h2>NASA PICTURE OF THE DAY</h2>
+    <form>
+        <input type="submit" value="See the Picture!">
+    </form>
+    <section class="results hidden">
+        <img class="nasa-image" alt="placeholder">
+      </section>
+</div>
+
+<script src="https://code.jquery.com/jquery-3.3.1.js" integrity="sha256-2Kok7MbOyxpgUVvAk/HJ2jigOSYS2auK4Pfzbm7uH60=" crossorigin="anonymous"></script>
+<script src="index.js"></script>
     
 </body>
 </html>
